tests/integration/snapshots/integration__conformance__y_number_simple_real.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
[123.456789]
stdout ---
[123.456789]

stderr ---
