tests/integration/snapshots/integration__conformance__y_object.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"asd":"sdf", "dfg":"fgh"}
stdout ---
{
  "asd": "sdf",
  "dfg": "fgh"
}

stderr ---
