tests/integration/snapshots/integration__conformance__y_object_basic.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"asd":"sdf"}
stdout ---
{"asd":"sdf"}

stderr ---
