tests/integration/snapshots/integration__conformance__y_object_basic.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
{"asd":"sdf"}
stderr ---
