tests/integration/snapshots/integration__conformance__y_object_duplicated_key.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"a":"b","a":"c"}
stdout ---
{ "a": "b", "a": "c" }

stderr ---
