tests/integration/snapshots/integration__conformance__y_object_duplicated_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
{"a":"b","a":"c"}
stdout ---
{
    "a": "c"
}

stderr ---
