tests/integration/snapshots/integration__conformance__y_object_duplicated_key_and_value.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"a":"b","a":"b"}
stdout ---
{"a":"b","a":"b"}

stderr ---
